# ephios_birthdate_settings

./: pyproject.toml
ephios_birthdate_settings/: apps.py  forms.py  signals.py  urls.py  views.py
ephios_birthdate_settings/templates/ephios_birthdate_settings/: birthdate_form.html  dashboard_card.html
