[tool.poetry]
name = "ephios-birthdate-settings"
version = "1.0.0"
description = "Allows user to set his own birthdate once"
authors = ["Ben Samuelson <ben.samuelson@fiteka.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."ephios.plugins"]
"ephios_birthdate_settings" = "ephios_birthdate_settings.apps.PluginApp"
